Fix scalafmt. Add test. Extract pasring aswer to separate method.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,6 @@
 version=3.0.8
-align = more
+align.preset = more
 maxColumn = 120
 continuationIndent.defnSite = 2
-danglingParentheses = true
+danglingParentheses.preset = true
 rewrite.rules = [SortImports, RedundantBraces, RedundantParens, SortModifiers]
